# backend-challenge-go

./: .dockerignore  .env.dev.example  .gitignore  BUILD.bazel  Challenge_README.md  Dockerfile  Makefile  README old.md  README.md  WORKSPACE  app.env  bazel-bin  bazel-go-go-backend  bazel-out  bazel-testlogs  cache.sqlite  commands.txt  config.toml  docker-compose.yml  go.mod  go.sum  main.go  modd.conf
app_context.go/: app_context.go
cmd/app/: app.go
cmd/challenge/: Dockerfile  config.go  data.go  db.go  handler.go  logging.go  main.go  main_test.go  routes.go  seed.go  seed_test.go  utils.go
cmd/challenge/data/: logging.go  seed.go
cmd/challenge/http/: logging.go  server.go
cmd/challenge/http/endpoints/: logging.go  tokens.go
cmd/challenge/models/: token_model.go
cmd/challenge/sql/: postgres.go  setup.go  tokens.go
cmd/challenge/types/: tokens.go
cmd/dao/: dao.go  token.go
cmd/fixture/: 1_tokens.go
cmd/handler/: handler_helper.go  token.go  token_test.go
cmd/helper/: db_seeder.go  default_env_value.go  loader.go  token_parser.go
cmd/mock/: mock_dao.go
cmd/model/: token.go  token_dto.go
cmd/service/: token_service.go  token_service_test.go
data/: addresses.jsonl  addresses_i.jsonl  addresses_test.jsonl  testaddresses.jsonl
docker/: dockerfile.token-api
docs/: CHALLENGE_INSTRUCTIONS.md
elasticsearch/mock/: mock_searcher.go
elasticsearch/token/: searcher.go
env/: env.go
eth/: crypto.go  errors.go  utils.go
eth/rpc/: json_encode.go  json_indent.go  json_scanner.go  json_stream.go  logging.go  rpc.go  token.go  token_helper.go
gotest/: handler_test.go
handler/: token.go  token_handler.go  token_handler_test.go  token_test.go
handlers/: handlers.go
internal/api/: server.go
internal/api/handler/: health_check.go
internal/api/handler/token_grp/: dto.go  token_grp.go  token_grp_test.go
internal/api/middleware/: rate_limiter.go  timeout.go
internal/handler/: handlers.go  health_check.go  health_check_test.go
internal/handler/v1/: tokens.go  tokens_test.go
internal/handlers/: handlers.go  interface.go  responses.go
internal/loader/: interface.go  loader.go
internal/model/: model.go  token.go
internal/models/: token.go
internal/pkg/address_loader/: address_loader.go  address_loader_test.go
internal/pkg/eth/: decoder.go  interface.go  logging.go  nft.go  token.go  types.go
internal/pkg/logging/: context.go  core.go  logging.go
internal/pkg/rpc/: errors.go  json_scanner.go  rpc.go  token.go  token_helper.go
internal/pkg/search_engine/: search_engine.go
internal/processor/: logging.go  processor.go  processor_test.go
internal/repositories/ethrepo/: ethrepo.go  interface.go
internal/repositories/redisrepo/: interface.go  mock.go  redisrepo.go  redisrepo_suite_test.go  redisrepo_test.go
internal/repositories/storagerepo/: interface.go  mock.go  storagerepo.go  storagerepo_suite_test.go  storagerepo_test.go
internal/repositories/tokensrepo/: interface.go  tokensrepo.go
internal/route/: routes.go
internal/server/: routes.go  server.go
internal/service/: interface.go  mock.go  mocks.go  search_service.go  service.go  service_test.go
internal/service/search/: search.go
loader/: address_loader.go
logging/: context.go  core.go  logging.go
migrations/: init.sql
model/: model.go
pkg/logger/: context.go  core.go  logging.go
router/: router.go
scripts/: build.sh  concurrent_request.sh  test.sh
scripts/db/: init.sql
service/: dependencies.go  token_service.go
service/mocks/: token_service_mock.go
test/output/: ThereIsNoToken
token_api/: go.mod  go.sum
token_api/cmd/: BUILD.bazel  main.go
token_api/internal/api/: BUILD.bazel  endpoints.go  endpoints_test.go
token_api/internal/dataloader/: BUILD.bazel  load.go  load_test.go
token_api/internal/dataloader/data/: addresses.jsonl
token_api/internal/eth/: BUILD.bazel  decoder_log.go  encoder.go  log_event.go  method.go  numbers.go
token_api/internal/eth/rpc/: BUILD.bazel  token.go  token_helper.go
token_api/internal/server/: BUILD.bazel  server.go
token_api/internal/types/: BUILD.bazel  types.go
types/: types.go
util/: config.go
utils/: utils.go  utils_test.go
views/: token_view.go
(+4 files in other folders)
