load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = ["endpoints.go"],
    importpath = "github.com/questionmarkquestionmark/go-go-backend/token_api/internal/api",
    visibility = ["//token_api:__subpackages__"],
    deps = [
        "//token_api/internal/dataloader",
        "//token_api/internal/types",
        "@com_github_gorilla_mux//:mux",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_exp//slices",
    ],
)

go_test(
    name = "api_test",
    srcs = ["endpoints_test.go"],
    embed = [":api"],
    deps = [
        "//token_api/internal/dataloader",
        "//token_api/internal/types",
        "@com_github_go_test_deep//:deep",
    ],
)
